--- a/proj.tinker.html
+++ b/proj.tinker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Arduino e LED</title>
 </head>
 <body>
     <nav>
@@ -17,6 +17,10 @@
         <a href="tinkerS.html">Simulção no TinkerCard semáforo duplo</a>
         <br>
         <a href="aarduinoS.html">Simulção na prática  semáforo duplo </a>
+        <br>
+        <a href="tnkerc.html">Contador crescente</a>
+        <br>
+        <a href="tinkd.html">Contador Decrescente</a>
     </nav>
     <br>
     <h1>Exemplo do circuito projeto Semaforo simples:</h1>
