--- a/aarduinoS.html
+++ b/aarduinoS.html
@@ -38,7 +38,7 @@
     <h2> Código C++ da IDE Arduíno: </h2>
     <br>
     <div>
-        <img src="./c++ semaf.D.png" alt="">
+        <img src="./c+2.jpg" alt="">
     </div>
     <br>
     <h2>Código C++:</h2>
