--- a/arduino.html
+++ b/arduino.html
@@ -37,7 +37,7 @@
     <h2> Código C++ da IDE Arduino:</h2>
     <br>
     <div>
-        <img src="./print c++ semaf.S..png" alt="">
+        <img src="./c+1.jpg" alt="">
     </div>
     <br>
     <h2> Código C++:</h2>
