--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Significa que será feita uma leitura da entrada analógica.
     <h2>Exemplo de código c++ no IDE Arduino:</h2>
     <br>
     <div>
-        <img src="./print c++.png" alt="">
+        <img src="./Sem título.jpg" alt="">
     </div>
     <br>
     <h2> Exemplo de código de Blocos no Tinkercad:</h2>
